# Triangle

./: .gitignore  CMakeLists.txt  README.md  makefile
bench/: benchmark_cpp_wrapper.cpp  benchmark_delaunay.c  benchmark_hull.c  benchmark_voronoi.c
cpp/: MeshOptimizer.cpp  MeshOptimizer.hpp  TriMeshGenerator.cpp  TriMeshGenerator.hpp
docs/: UserGuide.md
src/: Triangle.cpp  Triangle.hpp  triangle.c  triangle.h  tricall.c
tests/: test_mesh.cpp
vis/: image_poly.cpp  main_gui.cpp
